--- a/db/models.yml
+++ b/db/models.yml
@@ -18,7 +18,7 @@ Collection
   name: text
   user_id: integer  # who collection belongs_to
 
-CollectionRecord    # join table for collection and vinyls
+CollectionRecord
   collection_id: integer
   vinyl_id: integer
 
